<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_button">Верю</string>
    <string name="false_button">Не верю</string>
    <string name="next_button">Дальше</string>
    <string name="back_button">Назад</string>

    <string name="correct_toast">Верно!</string>
    <string name="incorrect_toast">Ты лошара:(</string>

    <string name="question_1">1. Змеи — глухие существа</string>
    <string name="question_2">2. Глаза слепня состоят из тысяч мельчайших отдельных глазков</string>
    <string name="question_3">3. У совы одно ухо выше другого</string>
    <string name="question_4">4. Родина тюльпана — Голландия</string>
    <string name="question_5">5. Было время, когда в оперу ходили со своим стулом</string>
    <string name="question_6">6. Быков раздражает красный цвет</string>
    <string name="question_7">7. Бриллианты можно сжечь</string>
    <string name="question_8">8. Верблюды запасают воду в своих горбах</string>
    <string name="question_9">9. Насекомые обладают самыми разнообразными голосами</string>
    <string name="question_10">10. Утонуть можно не только в воде, но и на суше</string>

    <string name="annotation_1">Они не слышат не только звуков, производимых их потенциальными жертвами, но и тех, что издают сами.</string>
    <string name="annotation_2">Большую часть головы слепня занимают фасеточные глаза.</string>
    <string name="annotation_3">Одно ухо расположено выше в черепе, чем другое.</string>
    <string name="annotation_4">Тюльпаны были выведены в Турции. Только в шестнадцатом веке голландские купцы привезли тюльпаны в Гаагу.</string>
    <string name="annotation_5">Необъяснимо, но факт!</string>
    <string name="annotation_6">Быков раздражает движение плаща в руках тореадора, а красный цвет от других они не отличают.</string>
    <string name="annotation_7">Алмаз состоит из чистого углерода, который при нагревании соединяется с кислородом воздуха и превращается в углекислый газ.</string>
    <string name="annotation_8">Нет, в горбах у них запасы жира.</string>
    <string name="annotation_9">Ни одно насекомое не имеет голоса. Звуки они издают крыльями или трением одной части тела о другую. </string>
    <string name="annotation_10">Утонуть можно и в зыбучих песках.</string>

</resources>