<?xml version="1.0" encoding="utf-8"?><!--
match_parent - размеры представления определяются размерами родителя
wrap_content - размеры представления определяются размерами содержимого
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <!-- android:orientation="vertical" Ж:как выстраиваются потомки (вертикально)-->
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:textSize="18dp"
        tools:text="@string/question_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- android:orientation="horizontal" Ж:как выстраиваются потомки (горизонтально)-->

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:width="130dp"
            android:text="@string/true_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="130dp"
            android:text="@string/false_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_left"
            android:width="130dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="4dp"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="130dp"
            android:drawableEnd="@drawable/arrow_right"
            android:drawablePadding="4dp"
            android:text="@string/next_button" />
    </LinearLayout>
</LinearLayout>